--- a/14_LazicNikicNeskovicSekesan.tex
+++ b/14_LazicNikicNeskovicSekesan.tex
@@ -37,7 +37,7 @@
 \maketitle
 
 \abstract{
-U radu su sažeto iznete osnove kriptografije potrebne za razumevanje i implementaciju blokčejna, konkretno koncepti heš funkcija i asimetrične kriptografije. Ukratko su predstavljene glavne ideje potrebne za realizaciju blokčejna i njegov značaj kao decentralizovana baza podataka opšte namene. Takođe su opisane aktuelne primene ove tehnologije kao što su kriptovalute sa fokusom na bitkoin i pametni ugovori u okviru Ethereum mreže.
+Dugostojeći problem konstruisanja sistema za javnu podelu podataka oko kojih se svi mogu složiti da su ispravni, a da pritom one ne zavise od garancije nekakvog centralnog autoriteta, prvi put je rešen relativno skoro sa nastankom blokčejna. U osnovi, ova tehnologija se zasniva na dva kriptografska koncepta: digitalnim potpisima, koji omogućavaju da se proveri autentičnost podataka, i heš funkcijama, kojim se može osigurati da se postigne koncenzus oko toga koji redosled podataka je ispravan. Ulančavanjem podataka grupisanih u blokove i korišćenjem pomenutih kriptografskih tehnika, dobijamo veoma moćan sistem opšte namene, koji je našao primenu u različitim oblastima, najznačajnije u domenu kriptovaluta kao što je bitkoin, kao i sistema pametnih ugovora koji nudi Ethereum mreža. 
 }
 \tableofcontents
 
@@ -69,10 +69,10 @@ Problem autentičnosti je efektivno rešen kriptografijom i digitalnim potpisima
 Kako bi se utvrdilo da je digitalni dokument objavljen u nekom trenutku moguće je takođe verovati
 centralnom autoritetu kao što je slučaj kod digitalnih sertifikata za veb-sajtove ili je ipak moguće
 ovo postići bez centralnog autoriteta. Najčešće se ovo postiže ''ulančavanjem'' kriptografskih heš vrednosti
-dokumenata i širokim objavljivanjem ovog lanca.
-
-Blokčejn spaja tehnologije digitalnih potpisa i metode za utvrđivanje hronologije izmena čime
+dokumenata i širokim objavljivanjem ovog lanca. Blokčejn spaja tehnologije digitalnih potpisa i metode za utvrđivanje hronologije izmena čime
 se formira poverljiv javni skup podataka.
+
+U radu su sažeto iznete osnove kriptografije potrebne za razumevanje i implementaciju blokčejna, konkretno koncepti heš funkcija i asimetrične kriptografije. Ukratko su predstavljene glavne ideje potrebne za realizaciju blokčejna i njegov značaj kao decentralizovana baza podataka opšte namene. Takođe su opisane aktuelne primene ove tehnologije kao što su kriptovalute sa fokusom na bitkoin i pametni ugovori u okviru Ethereum mreže.
 
 \section{Kriptografske osnove}	
 \label{sec:kriptografske_osnove}
