Autori u dve kolone da bi stao sadržaj

--- a/14_LazicNikicNeskovicSekesan.tex
+++ b/14_LazicNikicNeskovicSekesan.tex
@@ -22,16 +22,16 @@
 \title{Kako i zašto funkcioniše blockchain?\\ \small{Seminarski rad u okviru kursa\\Tehničko i naučno pisanje\\ Matematički fakultet}}
 \author{
     Lazić, Jovana\\ 
-    \texttt{mi22021@alas.matf.bg.ac.rs}
+    mi22021@alas.matf.bg.ac.rs
     \and
     Nikić, Ognjen\\ 
-    \texttt{mi22222@alas.matf.bg.ac.rs}
+    mi22222@alas.matf.bg.ac.rs
     \and
     Nešković, Ognjen\\ 
-    \texttt{mi22009@alas.matf.bg.ac.rs}
+    mi22009@alas.matf.bg.ac.rs
     \and
     Sekešan, Pavle\\ 
-    \texttt{mi22087@alas.matf.bg.ac.rs}
+    mi22087@alas.matf.bg.ac.rs
 }
 \date{\today}
 \maketitle
