--- a/14_LazicNikicNeskovicSekesan_prezentacija.tex
+++ b/14_LazicNikicNeskovicSekesan_prezentacija.tex
@@ -126,7 +126,17 @@
 \section{Primene}
 
 \begin{frame}[fragile]\frametitle{Kriptovalute}
-	
+	\begin{itemize}
+		\item Problem prihvatljivost decentralizovane valute
+		\begin{itemize}
+			\item utvrđivanje vlasništva - \textbf{asimetrična kriptografija}
+			\item onemogućavanje da se isti novac potroši više puta (eng. double-spending problem) - \textbf{blokčejn}
+		\end{itemize}
+		\item Prva kriptovaluta - \textbf{bitkoin}
+	\end{itemize}
+	\begin{figure}[H]
+		\includegraphics[scale=0.5]{Bitcoin_Transaction_Visual.pdf}
+	\end{figure}
 \end{frame}
 
 \begin{frame}[fragile]\frametitle{Pametni ugovori}
