Slajd Pametni ugovori

--- a/14_LazicNikicNeskovicSekesan_prezentacija.tex
+++ b/14_LazicNikicNeskovicSekesan_prezentacija.tex
@@ -6,6 +6,7 @@
 \usepackage{hyperref}
 \usepackage[flushleft]{threeparttable}
 \usepackage[english,serbian]{babel}
+\usepackage{subfigure}
 \definecolor{beamer@darkred}{rgb}{0.85,0.1,0.1}
 \setbeamercolor{structure}{fg=beamer@darkred}
 
@@ -140,7 +141,15 @@
 \end{frame}
 
 \begin{frame}[fragile]\frametitle{Pametni ugovori}
-	
+	\begin{itemize}
+		\item Apstraktnije posmatranje bitkoin mreže - promena iz jednog u drugo stanje vlasništva
+		\item Blokčejn opštije namene - \textbf{Ethereum}
+		\item Pametni ugovori - javno dostupan kod koji se izvršava u okviru blokčejna
+	\end{itemize}
+
+	\begin{figure}[H]
+		\includegraphics[scale=0.55]{Ethereum_State_Transition.pdf}
+	\end{figure}
 \end{frame}
 
 \begin{frame}[fragile]\frametitle{??}
