--- a/14_LazicNikicNeskovicSekesan_prezentacija.tex
+++ b/14_LazicNikicNeskovicSekesan_prezentacija.tex
@@ -29,7 +29,7 @@
 
 \begin{frame}[fragile]\frametitle{Literatura}
 	\begin{itemize}
-		\item G. Wood et al., “Ethereum: A secure decentralised generalised transaction ledger,” Ethereum project yellow paper, vol. 151, no. 2014, pp. 1-2, 2014.
+		\item G. Woocakd et al., “Ethereum: A secure decentralised generalised transaction ledger,” Ethereum project yellow paper, vol. 151, no. 2014, pp. 1-2, 2014.
 		\item S. Nakamoto, “Bitcoin: A peer-to-peer electronic cash system,” Decentralized Business Review, p. 21260, 2008.
 		\item H. S. Shin, “Chapter V Cryptocurrencies: looking beyond the hype,”BIS 2018 Annual Economic Report, 2018.
 		\item V. Buterin, “A next-generation smart contract and decentralized application platform,” white paper, vol. 3, 2014.
@@ -160,7 +160,20 @@
 \section{Zaključak}
 
 \begin{frame}[fragile]\frametitle{Zaključak}
-	
+	\begin{itemize}
+        \item Blokčejn - osnova kriptovaluta i pametnih ugovora
+	    \item Zašto su kriptovalute korisne?
+        \begin{itemize}
+            \item eliminišu ''double spending'' problem
+            \item ne zasnivaju se na poverenju
+            \item nije im potreban centralni autoritet da bi održale vrednost
+            \end{itemize}
+        \item Šta nam omogućavaju pametni ugovori?
+        \begin{itemize}
+            \item automatsko izvršavanje dogovora
+            \item visoku bezbednost
+        \end{itemize}
+	\end{itemize}
 \end{frame}
 
 \end{document}
