--- a/14_LazicNikicNeskovicSekesan_prezentacija.tex
+++ b/14_LazicNikicNeskovicSekesan_prezentacija.tex
@@ -82,7 +82,11 @@
 \end{frame}
 
 \begin{frame}[fragile]\frametitle{Asimetrična kriptografija}
-	
+	\begin{itemize}
+            \item Javni ključ i privatni ključ
+            \item Digitalni potpisi kao verifikacija identiteta
+            \item RSA algoritam kao primer algoritma digitalnog potpisa
+        \end{itemize}
 \end{frame}
 
 
