--- a/14_LazicNikicNeskovicSekesan_prezentacija.tex
+++ b/14_LazicNikicNeskovicSekesan_prezentacija.tex
@@ -74,7 +74,13 @@
 \section{Kriptografske osnove}
 
 \begin{frame}[fragile]\frametitle{Kriptografske heš funkcije - osobine}
-	
+	\begin{itemize}
+            \item Heš vrednost poruke brzo je izračunljiva i značajno je kraća od same poruke
+            \item Data poruka uvek ima istu heš vrednost
+            \item Nemoguće je naći poruku na osnovu njene heš vrednosti
+            \item Nemoguće je za datu poruku pronaći poruku sa istom heš vrednošću kao i uopšte pronaći dve poruke sa istom
+            \item Male promene u poruci rezultiraju u velikim promenama u njenoj heš vrednosti
+        \end{itemize}
 \end{frame}
 
 \begin{frame}[fragile]\frametitle{Kriptografske heš funkcije - algoritam}
