--- a/14_LazicNikicNeskovicSekesan.tex
+++ b/14_LazicNikicNeskovicSekesan.tex
@@ -114,7 +114,7 @@ Sledi algoritam za heširanje: početna poruka podeljena je na više blokova. Na
 \caption{Primer heš funkcija}
 \label{fig:hash_funkcije}
 \end{table}
-U tabeli \ref{fig:hash_funkcije} su dati primeri heš funkcija i odgovarajuće dužine dobijenog heša, dužine bloka korišćenog pri računanju heš funkcije, broj rundi (broj krugova izvršavanja operacija) i operacije koje svaka od heš funkcija koristi. Operacija 'xor' je bitovska operacija ekskluzivna disjunkcija, 'rot' je cirkularno pomeranje bitova,'šift' je logičko pomeranje bitova, a '+ mod' je operacija sabiranja po modulu.
+U tabeli \ref{fig:hash_funkcije} su dati primeri heš funkcija i odgovarajuće dužine dobijenog heša, dužine bloka korišćenog pri računanju heš funkcije i broj rundi (broj krugova izvršavanja operacija).
 
 
 
